common/knative/knative-eventing/overlays/security/namespace-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: knative-eventing
  labels:
    pod-security.kubernetes.io/enforce: restricted
